terraform-azure-platform/k8s/strideiq/01-base.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: strideiq
  labels:
    name: strideiq
