terraform-azure-platform/k8s/strideiq/04-network.yaml
apiVersion: v1
kind: Service
metadata:
  name: strideiq-svc
  namespace: strideiq
spec:
  selector:
    app: strideiq
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: strideiq-ingress
  namespace: strideiq
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - strideiq.fit
      secretName: strideiq-tls
  rules:
    - host: strideiq.fit
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: strideiq-svc
                port:
                  number: 80
